style(globals): Ensure body covers full screen

--- a/src/scss/base/_globals.scss
+++ b/src/scss/base/_globals.scss
@@ -23,9 +23,8 @@ body {
 	color: white;
 	z-index: -1;
 	background-image: url('https://vrwpaviv.elementor.cloud/wp-content/uploads/2024/12/bg-texture-scaled.webp');
-	background-position: fixed;
+	height: 100%;
 }
-
 
 main {
 	position: relative;
@@ -39,6 +38,7 @@ body {
 	overflow-x: hidden;
 	width: 100%;
 	max-width: 100vw;
+	height: 100%;
 	/* Prevent horizontal overflow */
 }
 
